two-ec2-security-ping-ports-saltmaster-saltminion.yaml
AWSTemplateFormatVersion: '2010-09-09'
Metadata:
  License: Apache-2.0
Description: 'AWS CloudFormation Sample Template EC2InstanceWithSecurityGroupSample:
  Create Amazon EC2 instances running the Amazon Linux AMI. The AMI is chosen based
  on the region in which the stack is run. This example creates EC2 security groups
  for the instances to give you SSH and ICMP access. **WARNING** This template creates Amazon
  EC2 instances. You will be billed for the AWS resources used if you create a stack
  from this template.'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x.
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
Resources:
  EC2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Download Bootstrap Script
          curl -o bootstrap-salt.sh -L https://bootstrap.saltproject.io

          # Make Executable
          chmod +x bootstrap-salt.sh

          # Install Salt Master service
          sudo ./bootstrap-salt.sh -M -N
  EC2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      ImageId: !Ref LatestAmiId
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Download Bootstrap Script
          curl -o bootstrap-salt.sh -L https://bootstrap.saltproject.io

          # Make Executable
          chmod +x bootstrap-salt.sh

          # Install Salt Minion
          sudo ./bootstrap-salt.sh

          # Update Salt Minion configuration with Master IP
          sudo sed -i "s/^#*master:.*/master: $(aws cloudformation describe-stacks --stack-name ${AWS::StackName} --query 'Stacks[0].Outputs[?OutputKey==`SaltMasterIP`].OutputValue' --output text)/" /etc/salt/minion
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and ICMP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 4505
          ToPort: 4505
          CidrIp: !Ref SSHLocation
        - IpProtocol: tcp
          FromPort: 4506
          ToPort: 4506
          CidrIp: !Ref SSHLocation
Outputs:
  Instance1Id:
    Description: The ID of EC2 Instance 1 (Salt Master)
    Value: !Ref EC2Instance1
  Instance2Id:
    Description: The ID of EC2 Instance 2 (Salt Minion)
    Value: !Ref EC2Instance2
  SaltMasterIP:
    Description: The public IP address of the Salt master instance
    Value: !GetAtt EC2Instance1.PublicIp
